# dimanche

./: .gitignore  README.md
basic/: cfg
config/darwin/: darwin-x86_64-debug.cfg
config/windows/: windows-x86_64-debug.cfg
config/windows-x86_64/: windows-x86_64-debug.cfg
dimanche/basic/: alloc.h  asm_defs.x86.inc  assert.h  color_formats.h  container_type.h  image.h  image.x86.inc  image_format.h  intrinsics.h  platform.h  resource.h  result.h  templates.h  types.h
dimanche/basic/inc/: di_color_formats.h  di_result.h  di_types.h
dimanche/basic/src/: alloc.cpp  container_type.cpp  image.cpp  result.cpp
dimanche/basic/tst/: di_color_formats.test.cpp
dimanche/cpu/: asm_defs.inc  cpu.h  cpu_opt.h  intrinsics.h
dimanche/cpu/inc/: cpu_internal.h
dimanche/cpu/src/: cpu.cpp  get_type.cpp
dimanche/cpu/src/asm/: get_type.x86.asm
dimanche/image_processing/: color_conversion.h
dimanche/image_processing/inc/: color_conversion.nv12.x86.inc  color_conversion.nv12_to_bgr.x86.inc  color_conversion.yuv_to_bgr.x86.inc  color_conversion.yuv_to_bgr_tables.x86.inc  color_conversion_internal.h  internal.h
dimanche/image_processing/src/: image_processing.color_conversion.cpp  image_processing.color_conversion.nv12.cpp  image_processing.color_conversion.nv12_to_bgra.cpp  image_processing.cpp
dimanche/image_processing/src/asm/: image_processing.color_conversion.nv12_to_bgra.avx2.x86.asm  image_processing.color_conversion.nv12_to_bgra.x86.ssse3.asm  image_processing.color_conversion.yuv_to_bgr_tables.x86.asm
dimanche/io/: console.h  file.h
dimanche/io/src/: io.console.cpp  io.file.cpp
dimanche/system/: asm_defs.inc  cpu.h  cpu_opt.h  intrinsics.h
dimanche/system/inc/: cpu_internal.h
dimanche/system/src/: system.cpu.cpp  system.cpu.get_type.cpp
dimanche/system/src/asm/: system.cpu.get_type.x86.asm  system.cpu.reset_state.avx.x86.asm  system.cpu.reset_state.mmx.x86.asm  system.cpu.reset_state.x86.avx.asm  system.cpu.reset_state.x86.mmx.asm
dimanche/vm/: file.h
dimanche/vm/src/: file.cpp
projects/cmake/: CMakeLists.txt
projects/msvc/: .gitignore  av1_dec.vcxproj  basic.vcxproj  basic.vcxproj.filters  cpu.vcxproj  cpu.vcxproj.filters  dimanche.sln  image_processing.vcxproj  io.vcxproj  splitters.vcxproj  system.vcxproj  system.vcxproj.filters  vm.vcxproj  vm.vcxproj.filters
script/: build.py  build.py.macos.settings  build.py.windows.settings  build.settings  di_build_fusion_core.py  di_build_path_manager.py  di_build_settings.py  di_config.py  di_format.py  di_log.py  di_platform.py  di_project.py  di_project_settings.py
settings/macos-x86_64/: macos-x86_64-debug.cfg
source/basic/: cfg
source/basic/inc/: di_color_formats.h  di_image.h  di_image_format.h
source/basic/include/: di_color_formats.h
tools/darwin/: build_asm.sh
tools/linux/: build_asm.sh
tools/macosx/: build_asm.sh
tools/win/: build_asm.cmd
tools/windows/: build_asm.cmd
